more pom sorting that is working;